# cancer-prediction-hd470

./: LICENSE  README.md  mkdocs.yml  notebook.ipynb  pyproject.toml
tests/: test_CancerModel.py
